doc/0.7/_sources/examples/index.rst.txt
Examples
--------

These Python scripts illustrate the use of the FreeDiscovery REST and Python
APIs on a subset of the TREC 2009 legal collection. 

These examples can be run with the following steps,

  1. `Install <https://freediscovery.github.io/doc/dev/installation_instructions.html>`_ FreeDiscovery and start either the development server or the Docker container.
  2. Activate the virtual environment,
    .. code-block:: bash

       source activate freediscovery-env # without the "source" on Windows
    
  3. Run the examples, e.g. 
     
  .. code-block:: bash
  
     python examples/categorization_example.py

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example of categorization using the Python API ">

.. only:: html

    .. figure:: /examples/images/thumb/sphx_glr_categorization_example_python_thumb.png

        :ref:`sphx_glr_examples_categorization_example_python.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/categorization_example_python

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example of clustering using the Python API ">

.. only:: html

    .. figure:: /examples/images/thumb/sphx_glr_clustering_example_python_thumb.png

        :ref:`sphx_glr_examples_clustering_example_python.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/clustering_example_python

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Thread a email collection ">

.. only:: html

    .. figure:: /examples/images/thumb/sphx_glr_email_threading_example_thumb.png

        :ref:`sphx_glr_examples_email_threading_example.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/email_threading_example

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Cluster documents into clusters ">

.. only:: html

    .. figure:: /examples/images/thumb/sphx_glr_clustering_example_thumb.png

        :ref:`sphx_glr_examples_clustering_example.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/clustering_example

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Find near-duplicates in a text collection ">

.. only:: html

    .. figure:: /examples/images/thumb/sphx_glr_duplicate_detection_example_thumb.png

        :ref:`sphx_glr_examples_duplicate_detection_example.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/duplicate_detection_example

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example to illustrate binary categorizaiton with FreeDiscovery ">

.. only:: html

    .. figure:: /examples/images/thumb/sphx_glr_categorization_example_thumb.png

        :ref:`sphx_glr_examples_categorization_example.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/categorization_example
.. raw:: html

    <div style='clear:both'></div>



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

    :download:`Download all examples in Python source code: examples_python.zip </examples/examples_python.zip>`



  .. container:: sphx-glr-download

    :download:`Download all examples in Jupyter notebooks: examples_jupyter.zip </examples/examples_jupyter.zip>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <http://sphinx-gallery.readthedocs.io>`_
